# UZH-Robot-Perception

./: .gitignore  CMakeLists.txt  README.md  img.csv  opt_p_G_C.txt  screenshot-1598976984.cam
data/01_ar_wireframe_cube/: cube_video.avi
data/06_two_view_geometry/: K.txt  points_3d.pcd
data/09_bundle_adjustment/: opt_p_G_C
data/ex3/: test_mat.txt
data/ex6/: K.txt
exercises/ex5/: disparityToPointCloud.m
include/: algorithm.h  all.h  arma_traits.h  ba.h  bow.h  common.h  common_utils.h  const_iter.h  const_iter.hpp  deprecated.h  dlt.h  feature.h  google_suite.h  image_formation.h  image_io.h  interpolation.h  io.h  klt.h  matlab_port.h  optimization.h  ransac.h  sift.h  stereo.h  traits.h  transfer.h  transform.h  two_view_geometry.h  vision.h
include/algorithm/: kmeans.h  quadtree.h  sort.h  weightedhist.h
include/arma_traits/: arma_hnormalized.h  arma_homogeneous.h
include/ba/: align_vo_to_ground_truth.h  compute_align_error.h  compute_reprojection_error.h  crop_problem.h  plot_map.h  project_point.h  run_ba.h
include/common/: ceres_functor.h  const_iter.h  load.h  mask.h  normalize.h  plot.h  tools.h  transform.h  type.h  vision.h
include/dlt/: estimate_pose_dlt.h  get_reprojection_error.h  reproject_points.h
include/feature/: convolution.h  cornerness.h  descriptor.h  distance.h  harris.h  imagesc.h  keypoint.h  matching.h  normalize.h  pad_array.h  shi_tomasi.h  subplot.h
include/image_formation/: distort_points.h  project_points.h  undistort_image.h
include/interpolation/: bicubic.h  bilinear.h  nearest_neighbor.h
include/io/: load.h
include/klt/: get_simple_warp.h  get_warped_patch.h  track_brute_force.h  track_klt.h  track_klt_robust.h  warp_image.h
include/matlab_port/: cell2mat.h  conv2.h  cross.h  datasample.h  find.h  fspecial.h  im2double.h  imagesc.h  imdilate.h  imgradient.h  imresize.h  imrotate.h  matchFeatures.h  meshgrid.h  nnz.h  padarray.h  pdist2.h  scatter.h  subplot.h  unique.h
include/optimization/: ceres_functor.h
include/ransac/: kneip_p3p.h  kneip_solve_quadratic.h  parabola_ransac.h  ransac_localization.h
include/sift/: compute_blurred_images.h  compute_descriptors.h  compute_dogs.h  compute_image_pyramid.h  derotate.h  extract_keypoints.h  get_image.h  get_image_sift.h
include/stereo/: disparity_to_point_cloud.h  get_disparity.h  get_image.h  get_image_stereo.h  visualize_point_cloud.h  write_point_cloud.h
include/traits/: cv2eigen.h  eigen2cv.h
include/transfer/: arma2cv.h  arma2eigen.h  arma2img.h  cv2arma.h  cv2eigen.h  dtt.h  eigen2arma.h  eigen2cv.h  img2arma.h
include/transform/: hat.h  rodrigues.h  twist.h  vee.h
include/two_view_geometry/: basic_sfm.h  decompose_essential_matrix.h  disambiguate_relative_poses.h  distance_point_to_epipolar_line.h  estimate_essential_matrix.h  fundamental_8point.h  fundamental_8point_normalized.h  fundamental_normalized_8point.h  nonlinear_triangulation.h  normalize_2d_points.h  normalize_points.h  points_to_epipolar_line_distance.h  triangulation.h
include/vision/: vision.h
notes/: eigen_3_4_features.md  eigen_quick_ref.md
results/05_stereo_dense_reconstruction/: disp_map.avi
results/08_lucas_kanade_tracker/: klt_track.avi  robust_klt_track.avi
results/ex6/: points_3d.pcd
results/ex8/: gauss_newton.avi
src/01_ar_wireframe_cube/: CMakeLists.txt  ar_wireframe_cube.cc
src/02_pnp_dlt/: CMakeLists.txt  pnp_dlt.cc
src/03_harris_detection_and_tracking/: CMakeLists.txt  harris_detection_and_tracking.cc
src/04_sift/: CMakeLists.txt  sift.cc
src/05_stereo_dense_reconstruction/: CMakeLists.txt  stereo_dense_reconstruction.cc
src/06_two_view_geometry/: CMakeLists.txt  two_view_geometry.cc
src/07_ransac_localization/: CMakeLists.txt  ransac_localization.cc
src/08_lucas_kanade_tracker/: CMakeLists.txt  lucas_kanade_tracker.cc
src/09_bundle_adjustment/: CMakeLists.txt  bundle_adjustment.cc
src/ex1/: CMakeLists.txt  ar_wireframe_cube.cc  understanding_check.md
src/ex2/: CMakeLists.txt  pnp_dlt.cc
src/ex3/: CMakeLists.txt  harris_detection_and_tracking.cc
src/ex4/: CMakeLists.txt  sift.cc
src/ex5/: CMakeLists.txt  stereo_dense_reconstruction.cc
src/ex6/: CMakeLists.txt  two_view_geometry.cc
src/ex7/: CMakeLists.txt  localizing_with_ransac.cc
src/ex8/: CMakeLists.txt  lucas_kanade_tracker.cc
src/ex9/: CMakeLists.txt  bundle_adjustment.cc
test/: test_arma_traits.cc  test_conv2.cc  test_pdist2.cc  test_unique.cc  test_weightedhist.cc
understanding_check/: lecture10.md  lecture11.md  lecture12.md  lecture2.md  lecture4.md  lecture7.md  lecture8.md
understanding_checks/: lecture01.md  lecture03.md  lecture06.md  lecture11.md  lecture13.md  lecture2.md  lecture5.md  lecture9.md
utils/: CMakeLists.txt  imgs2video.cc  pcd2ply.cc
